--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyWeddi">
-        <activity android:name=".roles.guest.ConfirmActivity"></activity>
+        <activity android:name=".module.forgotpassword.RequestNewPassActivity"></activity>
+        <activity android:name=".module.registration.RegistrationCompleteActivity" />
+        <activity android:name=".module.registration.RegistrationActivity" />
+        <activity android:name=".ProfilePhotoActivity" />
+        <activity android:name=".roles.guest.ConfirmActivity" />
         <activity android:name=".roles.guest.PostActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -40,7 +44,7 @@
         <activity android:name=".roles.guest.TableActivity" />
         <activity android:name=".roles.guest.SettingActivity" />
         <activity android:name=".roles.guest.GuestInfo" />
-        <activity android:name=".utils.CreatePost" />
+        <activity android:name=".module.createpost.CreatePost" />
         <activity android:name=".roles.guest.GuestHome" />
         <activity android:name=".MainActivity">
             <intent-filter>
