--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,6 @@ dependencies {
     implementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.9.0'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     implementation group: 'com.github.bumptech.glide', name: 'glide', version: '4.12.0'
+
+    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.4")
 }
